--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "author": "negokaz",
   "license": "MIT",
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-preset-es2015": "^6.13.2",
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
     "gulp-bower": "0.0.13",
@@ -34,7 +34,11 @@
   },
   "babel": {
     "presets": [
-      "es2015"
+      ["env", {
+        "targets": {
+          "node": "current"
+        }
+      }]
     ]
   }
 }
