Changed message listeners to prevent to change clipped pages

--- a/package.json
+++ b/package.json
@@ -34,11 +34,14 @@
   },
   "babel": {
     "presets": [
-      ["env", {
-        "targets": {
-          "node": "current"
+      [
+        "env",
+        {
+          "targets": {
+            "node": "current"
+          }
         }
-      }]
+      ]
     ]
   }
 }
